[package]
name = "decmathlib-rs"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Guzmán Álvarez"]
description = "Port of the Intel Decimal Floating-Point Math Library decimal128 type to Rust."
readme = "README.md"
repository = "https://github.com/carlosga/decmathlib-rs"
license = "MIT"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
overflow-checks = false     # Disable integer overflow checks.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "decmathlib"
harness = false