[package]
name = "decmathlib-rs"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Guzmán Álvarez"]
description = "Port of the Intel Decimal Floating-Point Math Library decimal128 type to Rust."
readme = "README.md"
repository = "https://github.com/carlosga/decmathlib-rs"
license = "MIT"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
overflow-checks = false     # Disable integer overflow checks.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["serde/default", "serde_json/default"]
sqlx = ["sqlx/default", "sqlx/postgres", "byteorder/default", "async-std/default"]

[dependencies]
forward_ref = { version = "1.0.0" }
byteorder = { version = "1.5", features = ["default"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.113", optional = true }
sqlx = { version = "0.7", features = [ "postgres", "runtime-async-std", "runtime-async-std-rustls" ], optional = true }
async-std = { version = "1.12.0", features = ["default"], optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"]  }

[[bench]]
name = "decmathlib"
harness = false